added media query mobile

--- a/index.html
+++ b/index.html
@@ -1,31 +1,44 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="en-us">
+
 <head>
-    <section class="header">
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>About Kate</title>
-        <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
-        <h1 class="name">Kate Foust</h1>
-        <section class="about"><a href=index.html>About</a></section>
-        <section class="portfolio"><a href=portfolio.html>Portfolio</a></section>
-        <section class="contact"><a href=contact.html>Contact</a></section>
-        <hr class="line-head">
-    </section>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="UTF-8">
+  <title>About Kate</title>
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
+
 <body>
-    <section class="center-box">
-        <h1 class="about-me">About Me</h1>
-        <hr class="line-top">
-        <img id=profile-pic src="./assets/images/Clarinet.JPG" alt="Kate profile" width="120px" height="160px">
+
+  <header id="masthead">
+    <div class="container">
+      <a href="index.html" id="logo">Kate Foust</a>
+      <nav>
+        <a href="index.html">About</a>
+        <a href="portfolio.html">Portfolio</a>
+        <a href="contact.html">Contact</a>
+      </nav>
+    </div>
+  </header>
+
+  <div id="main-container" class="container">
+    <section class="main-section">
+      <h1>About Me</h1>
+
+      <img id=profile-pic src="./assets/images/Clarinet.JPG" alt="Kate profile" width="120px" height="160px">
+
             <p>I'm a technical writer at Autodesk, based in San Francisco, CA. I've mainly for security and compliance teams, helping them communicate with auditors and customers about how they safeguard data. More recently, I've switched into a developer documentation role, working with developers to produce good internal and customer documentation. I love writing because I get to learn new things every day. I also love teaching, and I think anyone can learn to write well. When I'm not writing the docs, I'm spending my time coaching my colleagues and developing a writing center.</p>
             <p>I received my Masters in Professional Writing from Carnegie Mellon Univeristy. This education has given me a solid foundation in many disciplines, including design, rhetoric, and user research. I'm currently taking a coding bootcamp to improve my programming skills.</p>
             <p>Outside of work, I play clarinet. I am a proud member of the San Francisco Lesbian/Gay Freedom Band, and I have a seat on their Board as director of membership. The Freedom Band is the first openly gay music organization in the world, and it's recently been named the Official Band of San Francisco. The group has provided me with a community and musicians and activists that I can call friends.</p>
+
     </section>
-    </body>
-<footer>
-    <hr class=line-bottom>
-    <p>Copyright &copy</p>
-</footer>
+
+  </div>
+
+  <footer>
+    <div class="container">
+      Copyright &copy; 
+    </div>
+  </footer>
+</body>
+
 </html>
