--- a/portfolio.html
+++ b/portfolio.html
@@ -1,52 +1,65 @@
-<!DOCTYPE html>
-<html lang="en">
+
+<!doctype html>
+<html lang="en-us">
+
 <head>
-    <section class="header">
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Portfolio</title>
-        <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
-        <h1 class="name">Kate Foust</h1>
-        <section class="about"><a href=index.html>About</a></section>
-        <section class="portfolio"><a href=portfolio.html>Portfolio</a></section>
-        <section class="contact"><a href=contact.html>Contact</a></section>
-        <hr class="line-head">
-    </section>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="UTF-8">
+  <title>Portfolio | Kate Fouste</title>
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
 <body>
-    <section class="center-box" >
-            <div>
-                <h1>Portfolio</h1>
-                <hr class="line-top">
-                <div>
-                    <img id="hangman-image" src=assets/images/hangman.jpg alt="hangman" width=160px height=120>
-                    <img id="portfolio-image" src=assets/images/rpggame.jpg alt="RPG Game" width=160px height=120>
-                    
-                </div>
-                <div>
-                    <p id="hangman" class="banner">Hangman</p>
-                    <p id="rpg" class="banner">RPG Game</p>
-                </div>
-                <div>
-                    <img id="trivia-image" class="portfolio-image" src=assets/images/triviagame.jpg alt="Trivia Game" width=160px height=120>
-                    <img id="rutgers-image" class="portfolio-image" src=assets/images/rutgers.jpg alt= "Rutgers Info Widget" width=160px height=120>
-                </div>
-                <div>
-                    <p id="trivia" class="banner">Trivia Game</p>
-                    <p id= "rutgers" class="banner">Rutgers Info Widget</p>
-                </div>
-                <div>
-                    <img id="rps-image" class="porfolio-image" src=assets/images/rps.jpg alt= "Rock Paper Scissors" width=160px height=120>
-                    <p id="rps" class="banner">Rock Paper Scissors</p>
-                </div>
-            </div>
+
+  <header id="masthead">
+    <div class="container">
+      <a href="index.html" id="logo">Kate Foust</a>
+      <nav>
+        <a href="index.html">About</a>
+        <a href="portfolio.html">Portfolio</a>
+        <a href="contact.html">Contact</a>
+      </nav>
+    </div>
+  </header>
+
+  <div id="main-container" class="container">
+    <section class="main-section">
+      <h1>Portfolio</h1>
+
+      <div class="work">
+        <img src="assets/images/technics-q-c-640-480-1.jpg" alt="Word Guess">
+
+        <h3>Word Guess</h3>
+      </div>
+      <div class="work">
+        <img src="assets/images/technics-q-c-640-480-2.jpg" alt="RPG Game">
+
+        <h3>RPG Game</h3>
+      </div>
+      <div class="work">
+        <img src="assets/images/technics-q-c-640-480-5.jpg" alt="Trivia Game">
+
+        <h3>Trivia Game</h3>
+      </div>
+      <div class="work">
+        <img src="assets/images/technics-q-c-640-480-7.jpg" alt="Rutgers Info Widget">
+
+        <h3>Rutgers Info Widget</h3>
+      </div>
+      <div class="work">
+        <img src="assets/images/technics-q-c-640-480-9.jpg" alt="Rock Paper Scissors">
+
+        <h3>Rock Paper Scissors</h3>
+      </div>
+
     </section>
 
+  </div>
+
+  <footer>
+    <div class="container">
+      Copyright &copy;
+    </div>
+  </footer>
 </body>
-<footer>
-        <hr class=line-bottom>
-        <p>Copyright &copy</p>
-    </footer>
+
 </html>
