--- a/contact.html
+++ b/contact.html
@@ -1,37 +1,56 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head >
-        <section class="header">
-            <meta charset="UTF-8">
-            <meta name="viewport" content="width=device-width, initial-scale=1.0">
-            <meta http-equiv="X-UA-Compatible" content="ie=edge">
-            <title>Contact Info</title>
-            <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
-            <h1 class="name">Kate Foust</h1>
-            <section class="about"><a href=index.html>About</a></section>
-        <section class="portfolio"><a href=portfolio.html>Portfolio</a></section>
-        <section class="contact"><a href=contact.html>Contact</a></section>
-            <hr class="line-head">
-        </section>
-    </head>
-    <body>
-        <section class="center-box" >
-            <h1>Contact</h1>
-            <hr class="line-top">
-            <form>
-                Name<br>
-                <input class="form" type="text" name="full name" value="John Smith"><br>
-                Email<br>
-                <input class="form" type="text" name="Email" value="example@gmail.com"><br>
-                Message<br>
-                <textarea class="form" name="Message" rows="10" cols="30"></textarea><br>
-                <br>
-                <button class="submit" type="submit">Submit</button>
-            </form>
-        </section>
-    </body>
-    <footer>
-        <hr class=line-bottom>
-        <p>Copyright &copy</p>
-    </footer>
+<!doctype html>
+<html lang="en-us">
+
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="UTF-8">
+  <title>Contact | Kate Foust</title>
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+</head>
+
+<body>
+
+  <header id="masthead">
+    <div class="container">
+      <a href="index.html" id="logo">Kate Foust</a>
+      <nav>
+        <a href="index.html">About</a>
+        <a href="portfolio.html">Portfolio</a>
+        <a href="contact.html">Contact</a>
+      </nav>
+    </div>
+  </header>
+
+  <div id="main-container" class="container">
+    <section class="main-section">
+      <h1>Contact</h1>
+
+      <form id="contact-form">
+        <ul>
+          <li>
+            <label for="name">Name</label>
+            <input type="text" id="name" name="name" placeholder="John Smith" required="required">
+          </li>
+          <li>
+            <label for="email">Email</label>
+            <input type="email" id="email" name="email" placeholder="example@gmail.com" required="required">
+          </li>
+          <li>
+            <label for="message">Message</label>
+            <textarea id="message" name="message" required="required"></textarea>
+          </li>
+        </ul>
+        <input type="submit">
+      </form>
+
+    </section>
+
+  </div>
+
+  <footer>
+    <div class="container">
+      Copyright &copy; 
+    </div>
+  </footer>
+</body>
+
 </html>
